--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react-icons": "^4.4.0",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
+    "react-simple-chatbot": "^0.6.1",
     "react-swipeable-views": "^0.14.0",
     "react-toastify": "^9.0.7",
     "styled-components": "^5.3.5",
