--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react-axios": "^2.0.6",
     "react-dom": "^18.2.0",
     "react-icons": "^4.4.0",
+    "react-image-gallery": "^1.2.9",
     "react-query": "^3.39.2",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
