--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react": "^18.2.0",
     "react-axios": "^2.0.6",
     "react-dom": "^18.2.0",
+    "react-fast-marquee": "^1.3.5",
     "react-icons": "^4.4.0",
     "react-image-gallery": "^1.2.9",
     "react-query": "^3.39.2",
