--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-fast-marquee": "^1.3.5",
     "react-icons": "^4.4.0",
     "react-image-gallery": "^1.2.9",
+    "react-onclickoutside": "^6.12.2",
     "react-query": "^3.39.2",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
